<resources>
    <string name="app_name">Calculator</string>
    <string name="YOUR_ADMOB_APP_ID">ca-app-pub-7189325304186677~1612220021</string>
    <string name="YOUR_ADMOB_BLOCK_ID">ca-app-pub-7189325304186677/6481403326</string>

    <string name="sign_example">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="point">,</string>
    <string name="ought">0</string>
    <string name="clear">C</string>
    <string name="addition">+</string>
    <string name="equally">=</string>

</resources>
