<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    android:gravity="center_horizontal">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_margin="2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/calc_edit_text"
            android:enabled="false"
            android:gravity="right"
            android:inputType="numberSigned"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            android:text="@string/ought"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="@string/one"
            android:onClick="onNumberBtnClick"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="@string/two"
            android:onClick="onNumberBtnClick"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="@string/three"
            android:onClick="onNumberBtnClick"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_green"
            android:onClick="onOperationBtnClick"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="4"
            android:onClick="onNumberBtnClick"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="5"
            android:onClick="onNumberBtnClick"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="6"
            android:onClick="onNumberBtnClick"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_green"
            android:onClick="onOperationBtnClick"
            android:text="*"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="7"
            android:onClick="onNumberBtnClick"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="8"
            android:onClick="onNumberBtnClick"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="9"
            android:onClick="onNumberBtnClick"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_green"
            android:onClick="onOperationBtnClick"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:onClick="onNumberBtnClick"
            android:text="@string/point"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:contentDescription="0"
            android:onClick="onNumberBtnClick"
            android:text="@string/ought"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_blue"
            android:onClick="onCleanBtnClick"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_gravity="fill_vertical"
            android:layout_margin="2dp"
            android:layout_rowSpan="2"
            android:background="@drawable/calc_btn_green"
            android:onClick="onOperationBtnClick"
            android:text="@string/addition"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@drawable/calc_btn_red"
            android:onClick="onEqualBtnClick"
            android:text="@string/equally"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </GridLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:keepScreenOn="false"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/YOUR_ADMOB_BLOCK_ID"></com.google.android.gms.ads.AdView>

</RelativeLayout>
